src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_Salesperson__c</fullName>
        <label>Account Salesperson</label>
        <picklist>
            <picklistValues>
                <fullName>Advertising Sales Manager [n/a]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agency Sales Manager [Philip Marston]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agency Support Executive [n/a]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agency TES London [n/a]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agency TES Other [n/a]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agency THE [n/a]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Classified Creative Admin [unspecified]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Classified Creative Online Mngr [Kate Farrow]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Classified Creative Print Mngr [Geoff Lugg]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Classified Digital Manager [n/a]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Classified Digital Operations [unspecified]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Classified Mac Manager [n/a]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Classified Mac Operations [unspecified]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Classified Online Operations [unspecified]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Classified Production Admin [n/a]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Classified Production Deputy [n/a]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Classified Production Director [Michelle Reid]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Classified Production Manager [Gavin Power]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Director [Gareth Thyer-Jones]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CS Agency [unspecified]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CS Direct [unspecified]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CS FE / Intl [unspecified]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Service O01 [Gianetta Smith]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Service O02 [Antonio Tempesta]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Service O03 [Laura Harris]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Service O04 [n/a]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Service O05 [Andrew Mackenzie]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Service O06 [n/a]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Service O07 [Liz Newell]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Service O08 [Kirsty Stuart]</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Address_1__c</fullName>
        <label>Address 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_2__c</fullName>
        <label>Address 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Contact__c</fullName>
        <label>Contact Name</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agency__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Agency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Associations_if_applicable__c</fullName>
        <inlineHelpText>Please specify if the school is affiliated with any associations (FOBBISEA, COBIS, etc).</inlineHelpText>
        <label>Associations (if applicable)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>B2B__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If this account is a b2b, check box</inlineHelpText>
        <label>B2B</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Billing_Address_Changed_Date__c</fullName>
        <description>A field to track when a billing address has been changed</description>
        <label>Billing Address Changed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Billing_Email_Address__c</fullName>
        <description>This is the email address belonging to the billing Contact for Zuora Subscriptions</description>
        <label>Billing Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Billing_First_Name__c</fullName>
        <description>This is the first name of the Billing Contact for Zuora subscriptions</description>
        <label>Billing First Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Last_Name__c</fullName>
        <description>This is the last name of the Billing Contact for Zuora subscriptions</description>
        <label>Billing Last Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Phone__c</fullName>
        <description>This is the phone number of the Billing contact for Zuora subscriptions</description>
        <label>Billing Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Billing_Title__c</fullName>
        <description>This is the title of the Billing Contact name to be used for Zuora subscriptions</description>
        <label>Billing Title</label>
        <picklist>
            <picklistValues>
                <fullName>Mr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mrs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prof</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Block_Ads__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Block Ads</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Block_Reason__c</fullName>
        <label>Block Reason</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campus__c</fullName>
        <label>Campus</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charity_Number__c</fullName>
        <label>Charity No/EU Vat No</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City_Town__c</fullName>
        <label>City/Town</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Discount__c</fullName>
        <label>Client Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Client_Type__c</fullName>
        <label>Client Type</label>
        <picklist>
            <picklistValues>
                <fullName>Ag. Lge non-PPA/NPA 12.5%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ag. Med non-PPA/NPA 10%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ag. Sml non-PPA/NPA 0%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agency Local Authority 0%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agency Local Authority 10%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agency Local Authority 12.5%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agency Local Authority 15%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agency NPA/PPA 12.5%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agency PPA Mem. 10%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agency UK Major 15%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charity Overseas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charity Overseas EU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charity UK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>College Overseas EU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>College Overseas NonEU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>College UK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Company Overseas EU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Company Overseas NonEU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Company UK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>House</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Authority</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O/seas Ag. NonEU 0%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O/seas Ag. NonEU 10%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O/seas Ag. NonEU 12.5%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O/seas Ag. NonEU 15%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O/seas Ag. NonEU 25%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O/seas Ag. NonEU 27.5%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O/seas Ag. NonEU 30%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Institution</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Commission__c</fullName>
        <label>Commission %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Company_Number__c</fullName>
        <label>Company Reg Number</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>ABKHAZIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AFGHANISTAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AKROTIRI AND DHEKELIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALAND ISLANDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALBANIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALGERIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMERICAN SAMOA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANDORRA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANGOLA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANGUILLA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANTARCTICA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANTIGUA AND BARBUDA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARGENTINA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARMENIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARUBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASHMORE AND CARTIER ISLANDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUSTRALIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUSTRIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZERBAIJAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZORES, AUTONOMOUS REGION OF THE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAHAMAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAHRAIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BANGLADESH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BARBADOS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BELARUS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BELGIUM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BELIZE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BENIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BERMUDA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BHUTAN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>County_State__c</fullName>
        <label>County/State</label>
        <picklist>
            <controllingField>Country__c</controllingField>
            <picklistValues>
                <fullName>ANGLESEY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BUTE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAERNARFONSHIRE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONWY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COUNTY FERMANAGH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DURHAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GALLOWAY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GLASGOW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HUMBERSIDE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HYDE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISLE OF BARRA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISLE OF ISLAY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISLE OF TIREE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISLES OF SCILLY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MANCHESTER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MORAYSHIRE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PONT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RHONDDA CYNON TAFF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCOTTISH ISLES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOUTH HUMBERSIDE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUSSEX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TEESSIDE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TYRONE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WEST DUNBARTONSHIRE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WESTERN DUNBARTON</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YORKSHIRE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ABERDEEN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARMAGH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BANFFSHIRE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BELFAST</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Crown_Jewel__c</fullName>
        <defaultValue>false</defaultValue>
        <label>V.I.P.</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cumulative_Total_Ad_Spend__c</fullName>
        <label>Cumulative Total Ad Spend</label>
        <summarizedField>Client_Ad_Metrics__c.Total_Ad_Spend__c</summarizedField>
        <summaryForeignKey>Client_Ad_Metrics__c.Client__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Cumulative_Total_Ads_Placed__c</fullName>
        <label>Cumulative Total Ads Placed</label>
        <summarizedField>Client_Ad_Metrics__c.Total_Ads_Placed__c</summarizedField>
        <summaryForeignKey>Client_Ad_Metrics__c.Client__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Rank_by_Ad_Spend__c</fullName>
        <label>Current Rank by Ad Spend</label>
        <picklist>
            <picklistValues>
                <fullName>Top 20%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20% - 40%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40% - 60%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60% - 80%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>80% - 100%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_Rank_by_Ads_Placed__c</fullName>
        <label>Current Rank by Ads Placed</label>
        <picklist>
            <picklistValues>
                <fullName>Top 20%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20% - 40%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40% - 60%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60% - 80%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>80% - 100%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Curriculum_s__c</fullName>
        <label>Curriculum(s)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Group__c</fullName>
        <label>Customer Group</label>
        <picklist>
            <controllingField>Client_Type__c</controllingField>
            <picklistValues>
                <fullName>Academy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Academy Sponsor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Federation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Further</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Further/Higher Ed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Further Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Head Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Higher</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Higher Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ind. Prepatory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent MultiPhase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent Prep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent PrePrep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent Senior</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent Special</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intra Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Limited Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Education Authority</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Middle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multi-Phase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Limited Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Reg. Charity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nursery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Department</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PLC Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private Individual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pupil Referral Unit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Default_Bill_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default Bill To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_Not_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_Not_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_Not_Fax__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Fax</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_Not_Mail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Mail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dormant__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dormant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_Domains__c</fullName>
        <inlineHelpText>Comma separated email domains</inlineHelpText>
        <label>Email Domains</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Faculty__c</fullName>
        <label>Faculty</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Funding_Type__c</fullName>
        <label>Funding Type</label>
        <picklist>
            <picklistValues>
                <fullName>State</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Higher_ID__c</fullName>
        <label>Higher ID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hirewire__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hirewire</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <picklist>
            <picklistValues>
                <fullName>English</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lock_When_Converted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lock When Converted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MSL_Id_Text__c</fullName>
        <formula>TEXT(Msl_Id__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MSL Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Email__c</fullName>
        <inlineHelpText>The email that gets populated on the client record in MSL. Generally, the Finance/Billing email of the client.</inlineHelpText>
        <label>MSL Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mandatory_Order_Number__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mandatory Order Number</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Msl_Id__c</fullName>
        <description>The id of the account in MSL</description>
        <externalId>true</externalId>
        <label>MSL Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Msl_Salesman__c</fullName>
        <label>MSL Salesman</label>
        <picklist>
            <picklistValues>
                <fullName>Advertising Sales Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agency Sales Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agency Support Executive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agency TES London</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agency TES Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agency THE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Classified Creative Admin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Classified Creative Online Mngr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Classified Creative Print Mngr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Classified Digital Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Classified Digital Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Classified Mac Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Classified Mac Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Classified Online Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Classified Production Admin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Classified Production Deputy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Classified Production Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Classified Production Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CM Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CM Direct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Service O01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Service O02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Service O03</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Service O04</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Service O05</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Service O06</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Service O07</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Service O08</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Service O09</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NOR__c</fullName>
        <label>NOR</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Ads__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Ads</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Non_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Not_Approved_by_Finance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Not Approved</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>